add light and darkmode buttons, add js to switch themes
Co-authored-by: Deryck Jackson <Dgjackson01@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,3 +16,17 @@ h2.section {
   margin-top: 50px;
   margin-bottom: 50px;
 }
+
+body.light {
+  color: black;
+  background-color: white;
+}
+
+body.dark {
+  color: white;
+  background-color: black;
+}
+
+button {
+  float: right;
+}
